# sirius-rocm

./: .gitignore  .gitmodules  CMakeLists.txt  PORTING.md  README.md
.github/workflows/: rocm-test.yml
patches/: cuco_compat.hpp  rocm-source-fixes.patch  rocm-uncommitted-fixes.patch
scripts/: build_rocm_deps.sh  detect_gpu_arch.sh  hipdf_26.06_api_patch.sh  patch_hipdf_cuco.sh  run_tpch_rocm.sh  setup.sh
